[package]
name = "osm-graph"
authors = ["NoahSchiro"]
version = "0.1.0"
edition = "2021"

readme = "README.md"
license = "MIT"

description = "Convert OSM queries into graphs."
documentation = "todo!"
repository = "https://github.com/NoahSchiro/osm-graph"

keywords = ["map", "api", "graph", "data-structure"]
categories = ["api-bindings"]

exclude = [
	"/assets/*"
]

[dev-dependencies]
plotters = "0.3.6" # This will eventually be used for an example of plotting a graph

[dependencies]
petgraph = "0.6.5"
reqwest = { version = "0.12.5", features = ["json", "blocking"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
